<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_add_hackathon_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_hackathon"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/et_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        app:layout_constraintTop_toBottomOf="@id/tv_add_hackathon_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/et_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        app:layout_constraintTop_toBottomOf="@id/et_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:focusable="false"
        android:clickable="true" />

    <EditText
        android:id="@+id/et_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        app:layout_constraintTop_toBottomOf="@id/et_start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:focusable="false"
        android:clickable="true" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:padding="12dp"
        android:gravity="top"
        android:lines="4"
        android:maxLines="6"
        app:layout_constraintTop_toBottomOf="@id/et_end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:inputType="textMultiLine" />

    <ImageView
        android:id="@+id/iv_profile_image"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/no_image" />

    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_add_hackathon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_hackathon"
        app:layout_constraintTop_toBottomOf="@id/btn_select_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
